force-app/main/default/objects/Deal_Signal_History__c/Deal_Signal_History__c.object-meta.xml
<CustomObject>
    <description>Historical record of deal signal score changes over time.</description>
    <label>Deal Signal History</label>
    <nameField><label>Deal Signal History Name</label><type>AutoNumber</type><displayFormat>DSH-{000000}</displayFormat></nameField>
    <pluralLabel>Deal Signal History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>