force-app/main/default/objects/Deal_Signal_History__c/fields/Adjustment_Deltas__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Deltas__c</fullName>
    <label>Adjustment Deltas</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>