force-app/main/default/objects/Deal_Signal_History__c/fields/Component_Deltas__c.field-meta.xml
<CustomField>
    <fullName>Component_Deltas__c</fullName>
    <label>Component Deltas</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>