force-app/main/default/objects/Deal_Signal_History__c/fields/Deal_Signal__c.field-meta.xml
<CustomField>
    <fullName>Deal_Signal__c</fullName>
    <label>Deal Signal</label>
    <type>MasterDetail</type>
    <referenceTo>Deal_Signal__c</referenceTo>
    <relationshipLabel>Signal History</relationshipLabel>
    <relationshipName>Signal_History</relationshipName>
</CustomField>