force-app/main/default/objects/Deal_Signal_History__c/fields/New_Score__c.field-meta.xml
<CustomField>
    <fullName>New_Score__c</fullName>
    <label>New Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>