force-app/main/default/objects/Deal_Signal_History__c/fields/Score_Band_Changed__c.field-meta.xml
<CustomField>
    <fullName>Score_Band_Changed__c</fullName>
    <label>Score Band Changed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>