force-app/main/default/objects/Deal_Signal_History__c/fields/Signal_Source__c.field-meta.xml
<CustomField>
    <fullName>Signal_Source__c</fullName>
    <label>Signal Source</label>
    <type>Text</type>
    <length>50</length>
</CustomField>