force-app/main/default/objects/Deal_Signal_History__c/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <label>Trigger Event</label>
    <type>Text</type>
    <length>200</length>
</CustomField>